Add iOS Happ routing: Android/iOS tabs on keys page, admin routing profile editor, happ:// deep link generation
